testsuite/tests/th/T17820a.stderr
T17820a.hs:7:17: error: [GHC-28914]
    Stage error: ‘C’ is bound at stage {1} but used at stage 0
    Hint: quoting [| C |] or an enclosing expression would allow the quotation to be used in an earlier stage

