testsuite/tests/th/T17820a.hs
{-# LANGUAGE TemplateHaskell #-}

module Main where

data D = C ()

$( const mempty C )
